@@ -14,6 +14,11 @@ IMP_plugin_add_complex "piss" "^%botnicks:?,? (wee|piss|pee|urinate|empty your b
 proc IMP_plugin_complex_piss { nick host handle channel text } {
 	global botnicks
 	if [regexp -nocase "${botnicks}:?,? (please)?(piss|pee|urinate|empty your bladder) on (.+?)" $text ming ming1 ming2 ming3 who] {
+	
+		if [regexp -nocase "(himself|herself|itself|themsel)" $who] {
+			set who $nick
+		}
+
 		IMPDoAction $channel $who [pickRandom %VAR{pissOns}]
 	}
 }
